Fixed the overflow problem with the buttons. Fixed the styling of the buttons. Formatted the exerciseBody part.

--- a/workout-app/src/Components/Workouts/Workouts Styles/itemStyles.css
+++ b/workout-app/src/Components/Workouts/Workouts Styles/itemStyles.css
@@ -1,10 +1,9 @@
 .workoutItem{
     background-color: chartreuse;
+    height: 5rem;
+    border-radius: 1rem;
 }
 
-a.fill-div{
-    display: block;
-    height: 100%;
-    width: 100%;
-    text-decoration: none;
+h2{
+    margin: 0;
 }
