--- a/workout-app/src/Components/Workouts/Workouts Styles/workoutStyles.css
+++ b/workout-app/src/Components/Workouts/Workouts Styles/workoutStyles.css
@@ -7,18 +7,20 @@
     display: grid;
     grid-template-columns: 15rem 30rem;
     grid-gap: 1rem;
+    height: 100%;
 }
 
 .workoutDate{
     display: grid;
-    grid-row: 1rem;
-    /* row-gap: 2px; */
     overflow: auto;
-    /* height: 30rem; */
+    grid-auto-rows: min-content;
+    height: 100%;
 }
 
 button.dateBTN{
     padding: 0%;
     width: 100%;
-    /* height: 50%; */
+    height: fit-content;
+    margin-bottom: 0.25rem;
+    border-radius: 1rem;
 }
